# glaza

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: actions.rs  args.rs  data.rs  description.txt  git.rs  list.rs  main.rs  models.rs  set.rs  sh.rs  show.rs  shows_model.rs  watched_model.rs  wl.rs
src/args/: tests.rs
src/models/: show.rs  watched.rs  wl.rs
src/show/: actions.rs  model.rs
src/show/actions/: set.rs
src/wl/: actions.rs  model.rs
