[package]
name = "floral_barrel"
version = "0.1.0"
edition = "2021"
authors = ["Axlefublr"]
license = "MIT"
description = "reserved for later"
readme = "README.md"
homepage = "https://github.com/Axlefublr/floral_barrel"
repository = "https://github.com/Axlefublr/floral_barrel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
