[package]
name = "glaza"
version = "1.0.0"
edition = "2021"
authors = ["Axlefublr"]
license = "MIT"
description = "A program to help you track shows you're watching."
readme = "README.md"
homepage = "https://github.com/Axlefublr/glaza"
repository = "https://github.com/Axlefublr/glaza"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
clap = { version = "4.4.1", features = ["derive", "wrap_help"] }
dirs = "5.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.34"
indexmap = { version = "1.7.0", features = ["serde-1"] }
